--- a/environment.yml
+++ b/environment.yml
@@ -1,2 +1,276 @@
-name: clim680
-
+name: base
+channels:
+  - conda-forge
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - annotated-types=0.7.0=pyhd8ed1ab_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - archspec=0.2.3=pyhd8ed1ab_0
+  - asciitree=0.3.3=py_2
+  - attr=2.5.1=h166bdaf_1
+  - attrs=24.2.0=pyh71513ae_0
+  - aws-c-auth=0.7.30=hec5e740_0
+  - aws-c-cal=0.7.4=hfd43aa1_1
+  - aws-c-common=0.9.28=hb9d3cd8_0
+  - aws-c-compression=0.2.19=h756ea98_1
+  - aws-c-event-stream=0.4.3=h235a6dd_1
+  - aws-c-http=0.8.9=h5e77a74_0
+  - aws-c-io=0.14.18=h2af50b2_12
+  - aws-c-mqtt=0.10.5=h0009854_0
+  - aws-c-s3=0.6.5=hbaf354b_4
+  - aws-c-sdkutils=0.1.19=h756ea98_3
+  - aws-checksums=0.1.18=h756ea98_11
+  - aws-crt-cpp=0.28.2=h6c0439f_6
+  - aws-sdk-cpp=1.11.379=h5a9005d_9
+  - azure-core-cpp=1.13.0=h935415a_0
+  - azure-identity-cpp=1.8.0=hd126650_2
+  - azure-storage-blobs-cpp=12.12.0=hd2e3451_0
+  - azure-storage-common-cpp=12.7.0=h10ac4d7_1
+  - azure-storage-files-datalake-cpp=12.11.0=h325d260_1
+  - blosc=1.21.6=hef167b5_0
+  - bokeh=3.6.0=pyhd8ed1ab_0
+  - boltons=24.0.0=pyhd8ed1ab_0
+  - boto3=1.35.42=pyhd8ed1ab_0
+  - botocore=1.35.42=pyge310_1234567_0
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
+  - brotli-python=1.1.0=py312h2ec8cdc_2
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.32.3=h4bc722e_0
+  - ca-certificates=2024.8.30=hbcca054_0
+  - cartopy=0.23.0=py312hf9745cd_2
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - cffi=1.17.0=py312h06ac9bb_1
+  - cfgrib=0.9.14.1=pyhd8ed1ab_0
+  - cftime=1.6.4=py312hc0a28a1_1
+  - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - cloudpickle=3.1.0=pyhd8ed1ab_1
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - conda=24.11.0=py312h7900ff3_0
+  - conda-libmamba-solver=24.7.0=pyhd8ed1ab_0
+  - conda-package-handling=2.3.0=pyh7900ff3_0
+  - conda-package-streaming=0.10.0=pyhd8ed1ab_0
+  - contourpy=1.3.0=py312h68727a3_1
+  - cycler=0.12.1=pyhd8ed1ab_0
+  - cytoolz=1.0.0=py312h66e93f0_1
+  - dask=2024.9.1=pyhd8ed1ab_0
+  - dask-core=2024.9.1=pyhd8ed1ab_0
+  - dask-expr=1.1.15=pyhd8ed1ab_0
+  - distributed=2024.9.1=pyhd8ed1ab_0
+  - distro=1.9.0=pyhd8ed1ab_0
+  - eccodes=2.37.0=h8bb6dbc_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - esmf=8.7.0=mpi_mpich_h7cf99a1_101
+  - esmpy=8.7.0=pyhecae5ae_0
+  - fasteners=0.17.3=pyhd8ed1ab_0
+  - fastprogress=1.0.3=pyhd8ed1ab_0
+  - findlibs=0.0.5=pyhd8ed1ab_0
+  - flexcache=0.3=pyhd8ed1ab_0
+  - flexparser=0.3.1=pyhd8ed1ab_0
+  - fmt=10.2.1=h00ab1b0_0
+  - fonttools=4.53.1=py312h66e93f0_1
+  - freeglut=3.2.2=ha6d2627_3
+  - freetype=2.12.1=h267a509_2
+  - frozendict=2.4.4=py312h9a8786e_0
+  - fsspec=2024.9.0=pyhff2d567_0
+  - geos=3.12.2=he02047a_1
+  - gflags=2.2.2=h5888daf_1005
+  - glog=0.7.1=hbabe93e_0
+  - h2=4.1.0=pyhd8ed1ab_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.3=mpi_mpich_h0f54ddc_5
+  - hpack=4.0.0=pyh9f0ad1d_0
+  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - icu=75.1=he02047a_0
+  - idna=3.8=pyhd8ed1ab_0
+  - importlib-metadata=8.5.0=pyha770c72_0
+  - importlib_metadata=8.5.0=hd8ed1ab_0
+  - intake=0.7.0=pyhd8ed1ab_0
+  - intake-esm=2024.2.6=pyhd8ed1ab_1
+  - jasper=4.2.4=h536e39c_0
+  - jinja2=3.1.4=pyhd8ed1ab_0
+  - jmespath=1.0.1=pyhd8ed1ab_0
+  - jsonpatch=1.33=pyhd8ed1ab_0
+  - jsonpointer=3.0.0=py312h7900ff3_1
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py312h68727a3_0
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.40=hf3520f5_7
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20240116.2=cxx17_he02047a_1
+  - libaec=1.1.3=h59595ed_0
+  - libarchive=3.7.4=hfca40fe_0
+  - libarrow=17.0.0=hc80a628_14_cpu
+  - libarrow-acero=17.0.0=h5888daf_14_cpu
+  - libarrow-dataset=17.0.0=h5888daf_14_cpu
+  - libarrow-substrait=17.0.0=hf54134d_14_cpu
+  - libblas=3.9.0=24_linux64_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcap=2.71=h39aace5_0
+  - libcblas=3.9.0=24_linux64_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcurl=8.9.1=hdb1bdb2_0
+  - libdeflate=1.21=h4bc722e_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
+  - libexpat=2.6.2=h59595ed_0
+  - libfabric=1.22.0=ha594dbc_2
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.1.0=h77fa898_1
+  - libgcc-ng=14.1.0=h69a702a_1
+  - libgcrypt-lib=1.11.0=hb9d3cd8_2
+  - libgfortran=14.1.0=h69a702a_1
+  - libgfortran-ng=14.1.0=h69a702a_1
+  - libgfortran5=14.1.0=hc5f4f2c_1
+  - libglu=9.0.0=ha6d2627_1004
+  - libgomp=14.1.0=h77fa898_1
+  - libgoogle-cloud=2.29.0=h435de7b_0
+  - libgoogle-cloud-storage=2.29.0=h0121fbd_0
+  - libgpg-error=1.51=hbd13f7d_1
+  - libgrpc=1.62.2=h15f2491_0
+  - libhwloc=2.11.2=default_he43201b_1000
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=24_linux64_openblas
+  - libmamba=1.5.9=h4cc3d14_0
+  - libmambapy=1.5.9=py312h7fb9e8e_0
+  - libnetcdf=4.9.2=mpi_mpich_h761946e_14
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnl=3.11.0=hb9d3cd8_0
+  - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.27=pthreads_hac2b453_1
+  - libparquet=17.0.0=h39682fd_14_cpu
+  - libpnetcdf=1.13.0=mpi_mpich_hdf74816_101
+  - libpng=1.6.44=hadc24fc_0
+  - libprotobuf=4.25.3=hd5b35b9_1
+  - libre2-11=2023.09.01=h5a48ba9_2
+  - libsolv=0.7.30=h3509ff9_0
+  - libsqlite=3.46.1=hadc24fc_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx=14.1.0=hc0a3c3a_1
+  - libstdcxx-ng=14.1.0=h4852527_1
+  - libsystemd0=256.9=h2774228_0
+  - libthrift=0.20.0=h0e7cc3e_1
+  - libtiff=4.7.0=h6565414_0
+  - libudev1=256.9=hb9d3cd8_0
+  - libutf8proc=2.8.0=h166bdaf_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.16=hb9d3cd8_1
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.12.7=he7c6b58_4
+  - libzip=1.10.1=h2629f0a_3
+  - libzlib=1.3.1=h4ab18f5_1
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4=4.3.3=py312hb3f7f12_1
+  - lz4-c=1.9.4=hcb278e6_0
+  - lzo=2.10=hd590300_1001
+  - mamba=1.5.9=py312h9460a1c_0
+  - markupsafe=3.0.1=py312h178313f_1
+  - matplotlib-base=3.9.2=py312hd3ec401_1
+  - menuinst=2.1.2=py312h7900ff3_1
+  - metpy=1.6.3=pyhd8ed1ab_0
+  - mpi=1.0=mpich
+  - mpich=4.2.3=h239ebd3_102
+  - msgpack-python=1.1.0=py312h68727a3_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.5=he02047a_1
+  - netcdf-fortran=4.6.1=mpi_mpich_h2e543cf_6
+  - netcdf4=1.7.1=nompi_py312h21d6d8e_102
+  - numcodecs=0.13.1=py312hf9745cd_0
+  - numpy=2.1.1=py312h58c1407_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openssl=3.4.0=hb9d3cd8_0
+  - orc=2.0.2=h669347b_0
+  - packaging=24.1=pyhd8ed1ab_0
+  - pandas=2.2.2=py312h1d6d2e6_1
+  - parallelio=2.6.3=mpi_mpich_h43d51f9_100
+  - partd=1.4.2=pyhd8ed1ab_0
+  - pillow=10.4.0=py312h56024de_1
+  - pint=0.24.3=pyhd8ed1ab_0
+  - pip=24.2=pyh8b19718_1
+  - platformdirs=4.2.2=pyhd8ed1ab_0
+  - pluggy=1.5.0=pyhd8ed1ab_0
+  - pooch=1.8.2=pyhd8ed1ab_0
+  - proj=9.4.1=h54d7996_1
+  - psutil=6.0.0=py312h66e93f0_2
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pyarrow=17.0.0=py312h9cebb41_1
+  - pyarrow-core=17.0.0=py312h9cafe31_1_cpu
+  - pyarrow-hotfix=0.6=pyhd8ed1ab_0
+  - pybind11-abi=4=hd8ed1ab_3
+  - pycosat=0.6.6=py312h98912ed_0
+  - pycparser=2.22=pyhd8ed1ab_0
+  - pydantic=2.9.2=pyhd8ed1ab_0
+  - pydantic-core=2.23.4=py312h12e396e_0
+  - pyparsing=3.1.4=pyhd8ed1ab_0
+  - pyproj=3.6.1=py312h9211aeb_9
+  - pyshp=2.3.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - python=3.12.5=h2ad013b_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-eccodes=2.37.0=py312hc0a28a1_0
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.12=5_cp312
+  - pytz=2024.2=pyhd8ed1ab_0
+  - pyyaml=6.0.2=py312h66e93f0_1
+  - qhull=2020.2=h434a139_5
+  - rdma-core=54.0=h5888daf_1
+  - re2=2023.09.01=h7f4b329_2
+  - readline=8.2=h8228510_1
+  - reproc=14.2.4.post0=hd590300_1
+  - reproc-cpp=14.2.4.post0=h59595ed_1
+  - requests=2.32.3=pyhd8ed1ab_0
+  - ruamel.yaml=0.18.6=py312h98912ed_0
+  - ruamel.yaml.clib=0.2.8=py312h98912ed_0
+  - s2n=1.5.5=h3931f03_0
+  - s3transfer=0.10.3=pyhd8ed1ab_0
+  - scipy=1.14.1=py312h7d485d2_0
+  - setuptools=73.0.1=pyhd8ed1ab_0
+  - shapely=2.0.6=py312h6cab151_1
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.2.1=ha2e4443_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
+  - sqlite=3.46.1=h9eae976_0
+  - tblib=3.0.0=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - toolz=1.0.0=pyhd8ed1ab_0
+  - tornado=6.4.1=py312h66e93f0_1
+  - tqdm=4.66.5=pyhd8ed1ab_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - truststore=0.9.2=pyhd8ed1ab_0
+  - typing-extensions=4.12.2=hd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - tzdata=2024a=h8827d51_1
+  - ucx=1.17.0=h05e919c_3
+  - urllib3=2.2.2=pyhd8ed1ab_1
+  - wheel=0.44.0=pyhd8ed1ab_0
+  - xarray=2024.9.0=pyhd8ed1ab_0
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-inputproto=2.3.2=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libx11=1.8.9=hb711507_1
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h4bc722e_1
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xyzservices=2024.9.0=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
+  - yaml=0.2.5=h7f98852_2
+  - yaml-cpp=0.8.0=h59595ed_0
+  - zarr=2.18.3=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_0
+  - zipp=3.20.2=pyhd8ed1ab_0
+  - zlib=1.3.1=h4ab18f5_1
+  - zstandard=0.23.0=py312hef9b889_1
+  - zstd=1.5.6=ha6fb4c9_0
+prefix: /home/jwill96/miniforge
